2016-05-31  Carl Hetherington  <cth@carlh.net>

	* Remove mention of finding subtitles when examining
	audio-only content (#882).

2016-05-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.5 released.

2016-05-30  Carl Hetherington  <cth@carlh.net>

	* Keep audio dialogue always-on-top (#756).

	* Add Cancel button to custom colour conversion
	dialogue (#880).

	* Give the option to abort the operation when creating
	a new film or opening an existing one (#847).

2016-05-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-05-27  Carl Hetherington  <cth@carlh.net>

	* Try to keep video waveform dialogue on top at all times (#820).

	* Updated uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

2016-05-25  Carl Hetherington  <cth@carlh.net>

	* Add hint about excessive audio level (part of #822).

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-05-25  c.hetherington  <cth@carlh.net>

	* Treat video MXFs better by not transcoding
	them unless necessary (part of #803).

2016-05-24  c.hetherington  <cth@carlh.net>

	* Add somewhat speculative Rec 1886 and Rec 2020
	colour conversion presets (#832).

	* Disallow referencing of Interop DCPs in SMPTE
	films, and vice versa (#804).

2016-05-23  c.hetherington  <cth@carlh.net>

	* Fix missing words in properties window (#874).

2016-05-23  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.4 released.

2016-05-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.3 released.

2016-05-16  Carl Hetherington  <cth@carlh.net>

	* Use CPL title for KDM <AnnotationText> nodes.

2016-05-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.2 released.

2016-03-16  Carl Hetherington  <cth@carlh.net>

	* Optimise image scaling for the preview.

2016-05-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully improve strange colour fringing on
	subtitles burnt into existing DCP sources (#752).
